--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SzoftverfejlesztesMernokoknek
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./DB
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
