--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.url=jdbc:h2:file:./DB
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
