--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "gasp": "^0.0.2",
     "gsap": "^3.12.5",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
