--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,27 +1,33 @@
 spring:
   application:
     name: SzoftverfejlesztesMernokoknek
-
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:./DB
     username: admin
     password: admin
-
   h2:
     console:
       enabled: true
-
   jpa:
     hibernate:
       ddl-auto: create
 #       ddl-auto: update
-
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
+  mail:
+    host: mail.manageyself.com
+    port: 465
+    username: info@manageyself.com
+    password: ...
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
 
 
 server:
