nationality entity, API usage added and minor changes related to the email sending service

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -28,8 +28,11 @@ spring:
         smtp:
           socketFactory:
             class: javax.net.ssl.SSLSocketFactory
+            port: 465
           auth: true
           starttls.enable: true
+          ssl:
+            enable: true
 
 
 server:
